--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,8 +6,8 @@
     <!-- Navigation Bar -->
     <div class="login-container">
         <div class="login-box">
-          <h2>Login</h2>
-          <form action="{{ url_for('routes.auth.login') }}" method="POST">
+          <h2>Register</h2>
+          <form action="{{ url_for('routes.auth.register') }}" method="POST">
             {{ form.hidden_tag() }}
               <div class="input-group">
                 <label for="Roll number">Roll Number</label>
@@ -17,13 +17,14 @@
                 <label for="password">Password</label>
                 {{ form.password(class="form-control", placeholder="Enter your password") }}
               </div>
-            <button type="submit" class="register-button">Submit</button>
+              <div class="input-group">
+                <label for="password">Confirm Password</label>
+                {{ form.confirm_password(class="form-control", placeholder="Confirm your password") }}
+              </div>
+            <button type="submit" class="login-button">Submit</button>
           </form>
-          <div class="forgot-password">
-            <a href="/forgot-password" class="forgot-password"> Forgot Password? </a>
-          </div>
           <div class="login-link">
-            Don't have an account? <a href="/register" class="register-link">Register</a>
+            Already have an account? <a href="/login" class="login-link">Login</a>
           </div>
             {%include 'flash.html'%}
           </div>
