--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="header__logo">
         <a href = '/'>
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Studio Centauri logo">
+        <img src="https://i.postimg.cc/XNZmz9WF/temp-Image8-RGe-Zd.avif" alt="Studio Centauri logo">
         </a>
     </div>
 
@@ -9,8 +9,9 @@
         <ul>
             <li><a href = '/'>Home</a></li>
             <li><a href = '/about'>About</a></li>
-            <li><a href = '/contact'>Contact</a></li>
-            <li><a href = '/login'>Login</a></li>
+            <li><a href = '/contact'>Contact Us</a></li>
+            <li><a href = '/roadmaps'>Roadmaps</a></li>
+            <li><a href = '/gamejams'>Game Jams</a></li>
         </ul>
     </div>
 
