--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,7 +11,7 @@
             <li><a href = '/about'>About</a></li>
             <li><a href = '/contact'>Contact Us</a></li>
             <li><a href = '/roadmaps'>Roadmaps</a></li>
-            <li><a href = '/gamejams'>Game Jams</a></li>
+            <li><a href = '/games'>Games</a></li>
         </ul>
     </div>
 
